[gd_scene load_steps=4 format=3 uid="uid://t8gsuuvf5gov"]

[ext_resource type="Script" uid="uid://dtx6bln16njm" path="res://Managers/random_passerby.gd" id="1_6mg11"]
[ext_resource type="Texture2D" uid="uid://b7pp08eiiqm6" path="res://assets/Villager-Face.png" id="1_gxmmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mg11"]
size = Vector2(722, 347)

[node name="Random passerby" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6mg11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_6mg11")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_gxmmp")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 67.0
offset_top = -138.0
offset_right = 765.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 64
text = "This is a warzone and these crabs have been attacking us for a long time."
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = -413.0
offset_right = -156.0
offset_bottom = 634.0
theme_override_font_sizes/font_size = 64
text = "I have no idea where I am, so I will try to find them and fight them."
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="Area2D" method="_on_timer_timeout"]
